use hidden class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <button>Click me</button>
-      <ul style="display: none;">
+      <ul class="hidden">
         <li>Option 1</li>
         <li>Option 2</li>
         <li>Option 3</li>
